feat: add centralized logging, request/response filter and standardized error handling